##########################
# Setup.py Configuration #
##########################
[metadata]
name = pybel_tools
version = attr: src.pybel_tools.version.VERSION
description = A cool pool of tools for BEL
long_description = file: README.rst

# URLs associated with PyBEL-Tools
url = https://github.com/pybel/pybel-tools
download_url = https://github.com/pybel/pybel-tools/releases
project_urls =
    Bug Tracker = https://github.com/pybel/pybel-tools/issues
    Source Code = https://github.com/pybel/pybel-tools
    Documentation = https://pybel-tools.readthedocs.io

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Networks Biology
    Systems Biology

[options]
install_requires =
    dataclasses-json
    networkx
    requests
    click
    sqlalchemy
    tqdm
    # PyBEL
    bel_resources>=0.0.3
    pybel<0.16.0
    # Scientific Python
    pandas
    scipy
    numpy
    matplotlib
    seaborn

python_requires = >=3.7
tests_require =
    tox
include_package_data = True
zip_safe = true

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
assembler_ideogram =
    IPython
    jinja2
    bio2bel-hgnc
    bio2bel-entrez
assembler_html =
    jinja2

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pybel-tools
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/pybel_tools
    .tox/*/lib/python*/site-packages/pybel_tools

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
